# crypto-hacks

./: .gitignore  cryptohacks.opam  dune-project  readme.md
.github/workflows/: ocaml-dune-ci.yml
_build/: .db  .digest-db  log
_build/default/: cryptohacks.dune-package  cryptohacks.install
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/: cryptohacks.cma  cryptohacks.cmxa  cryptohacks.cmxs  cryptohacks.ml-gen
_build/default/lib/.cryptohacks.objs/: cryptohacks__Challenge1.impl.d  cryptohacks__Challenge2.impl.d  cryptohacks__Challenge3.impl.all-deps  cryptohacks__Challenge3.impl.d
_build/default/lib/.cryptohacks.objs/byte/: cryptohacks.cmi  cryptohacks.cmo  cryptohacks.cmt  cryptohacks__Challenge1.cmi  cryptohacks__Challenge1.cmo  cryptohacks__Challenge1.cmt  cryptohacks__Challenge2.cmi  cryptohacks__Challenge2.cmo  cryptohacks__Challenge2.cmt  cryptohacks__Challenge3.cmi  cryptohacks__Challenge3.cmo  cryptohacks__Challenge3.cmt
_build/default/lib/.cryptohacks.objs/native/: cryptohacks.cmx  cryptohacks__Challenge1.cmx  cryptohacks__Challenge2.cmx  cryptohacks__Challenge3.cmx
_build/default/lib/.merlin-conf/: lib-cryptohacks
_build/default/test/.merlin-conf/: exe-test_cryptohacks
_build/default/test/.test_cryptohacks.eobjs/byte/: dune__exe__Test_cryptohacks.cmi  dune__exe__Test_cryptohacks.cmti
lib/: challenge1.ml  challenge2.ml  challenge3.ml  challenge4.ml  challenge5.ml  challenge6.ml  challenge7.ml  challenge8.ml  dune
lib/encoding/: dune  hex_encoding.ml
lib/modularArithmatic/: congruency.ml  dune  gcd.ml
test/: dune
(+4 files in other folders)
