(lang dune 3.15)

(name cryptohacks)

(generate_opam_files true)

(source
 (github ggsmith842/crypto-hacks))

(authors "Grant Smith")

(maintainers "ggsmith842")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name cryptohacks)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
